--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="app.css" />
+  <!-- <link rel="stylesheet" href="app.css" /> -->
   <title>Weather Widget</title>
-  <script src="dist/bundle.js" type="module"></script>
+  <!-- <script src="dist/bundle.js" type="module"></script> -->
 </head>
 
 <body>
   <div class="container" id="main-container">
+    <div id="background-container"></div>
     <div class="today-container">
     <div class="today">
       <div class="city-info">
