feat: implemented autocomplete and optimized background fetch

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <form class="hidden">
-      <input type="text" placeholder="enter city name">
+      <input type="text" placeholder="enter city name" id="auto-complete" tabindex="1" autocomplete="off">
       <div><button type="submit" class="font-s confirm" id="confirm">Confirm</button>
         <button type="button" class="font-s cancel" id="cancel">Cancel</button></div>
      
