--- a/src/views/index.html
+++ b/src/views/index.html
@@ -59,6 +59,7 @@
           tabindex="1"
           autocomplete="off"
         />
+        <div id="error-msg"><p>*Please enter a valid city</p></div>
         <div>
           <button type="submit" class="font-s confirm" id="confirm">
             Confirm
